# SLGJ-2024

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README.md  cmake_install.cmake
libs/: CMakeLists.txt
scripts/: gol.scm  keys.scm  main.scm  prompt.scm  structs.scm  utils.scm
sources/: core.h  main.c  shapes.h  text.h  texture.h  types.h
sources/rl/: core.h  enums.c  enums.h  shapes.h  text.h  texture.h  types.h
sources/s7/: s7.c  s7.h
tools/: generate_raylib_enums.py
